--- a/styles/style.css
+++ b/styles/style.css
@@ -18,7 +18,7 @@
     max-width: 1150px;
     margin-left: auto;
     margin-right: auto;
-    color: white;
+    
 }
 
     /*  style */
@@ -27,6 +27,7 @@
 /* nav styles */
 header{
     background-color: rgba(26, 11, 46, 1);
+    display: none;
     
 }
 
@@ -64,7 +65,7 @@ nav span{
 -webkit-text-fill-color: transparent;
 
 }
-nav button{
+.p-btn{
 background: #F7E93F;
 background: linear-gradient(14deg, rgba(247, 233, 63, 1) 0%, rgba(251, 9, 180, 1) 51%, rgba(145, 0, 248, 1) 100%);
 padding: 12px 16px;
@@ -78,11 +79,70 @@ font-weight: 550;
 
 /* nav styles end */
 
+/* grid-cards */
+.grid-card{
+    text-align: center;
+    background-color: rgba(35, 14, 61, 1);
+    
+
+    
+}
+.grid-card h1{
+    color: white;
+    margin-bottom: 30px;
+    font-size: 3rem;
+    font-weight: 700;
+}
+.grid-container{
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    grid-template-rows: repeat(3,1fr);
+    gap: 20px;
+   
+}
+.grid-container > *{
+    box-shadow: 0px 4px 4px 0 rgba(0, 0, 0, 0.25);
+    text-align: left;
+    background-color: rgba(53, 17, 101, 0.4);
+    padding: 30px;
+    color: white;
+    align-content: center;
+    border-radius: 40px;
+    
+    
+}
+
+.box-1{
+    grid-row: span 2; 
+}
+.grid-container h4{
+    
+    font-weight: 700;
+    font-size: 1.25rem;
+    color: white; 
+    margin-bottom: 10px;
+    margin-top: 20px;
+}
+.grid-container p{
+    font-size: 1rem;
+    line-height: 24px;
+    opacity: 40%;
+
+}
+.box-2,.box-3,.box-4{
+    grid-column: span 3;
+   
+}
+
+
+
+
 
 /* small device */
 @media screen and (max-width:576px){
     nav ul li,nav button{
         display: none;
+        
         
     }
     .hidden{
@@ -91,5 +151,22 @@ font-weight: 550;
     header{
         overflow: hidden;
     }
+    .grid-container{
+        grid-template-columns: repeat(1,1fr);
+        grid-template-rows: repeat(1,1fr);
+
+        padding: 0px 20px;
+    }
+
+    .box-1,.box-5{
+        grid-column: span 3;
+        
+    }
+  .grid-card h1{
+    font-size: 2rem;
+    padding-top: 20px;
+  }
+   
+    
 
 }
