--- a/styles/style.css
+++ b/styles/style.css
@@ -28,7 +28,7 @@
 /* nav styles */
 header{
     background-color: rgba(26, 11, 46, 1);
-    display: none;
+    /* display: none; */
     
 }
 
@@ -66,6 +66,10 @@ nav span{
 -webkit-text-fill-color: transparent;
 
 }
+#logo{
+    color: #ffffff;
+    font-weight: 700;
+}
 .p-btn{
 background: #F7E93F;
 background: linear-gradient(14deg, rgba(247, 233, 63, 1) 0%, rgba(251, 9, 180, 1) 51%, rgba(145, 0, 248, 1) 100%);
@@ -84,16 +88,19 @@ font-weight: 550;
 .grid-card{
     text-align: center;
     background-color: rgba(35, 14, 61, 1);
-    display: none;
+    /* display: none; */
+    padding-bottom: 100px;
     
 
     
 }
+
 .grid-card h1,.episode-container h1{
     color: white;
     margin-bottom: 30px;
     font-size: 3rem;
     font-weight: 700;
+    padding-top: 20px;
 }
 .grid-container{
     display: grid;
