--- a/styles/style.css
+++ b/styles/style.css
@@ -21,6 +21,9 @@
    
     
 }
+header,.grid-card,.episode-container{               /*display none*/
+    display: none;                          
+}
 
     /*  style */
 
@@ -207,6 +210,80 @@ font-weight: 550;
     width: 24px;
     
 }
+/* host section */
+.host{
+    text-align: center;
+    
+    /* margin-top: 100px; */
+    background-color: #1A0B2E;
+    padding-bottom: 150px;
+    padding-top: 100px;
+}
+.host-content{
+     background-color: #260e42;
+     padding: 40px;
+     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+     border-radius:25px;
+}
+
+.host-text{
+    text-align: left;
+   
+   justify-content: center;
+    display: flex;
+   flex-direction: column;
+   padding-bottom: 20px;
+   padding-left: 20px;
+  
+   
+
+}
+.icons{
+    display: flex;
+    align-items: center;
+    
+    
+   
+    
+}
+.icon-container{
+    border: 1px solid #533C72;
+    border-radius: 50%;
+    max-width: 40px;
+    max-height: 40px;
+    margin-right: 10px;
+}
+.icons img{
+    
+    /* border: 1px solid black; */
+    
+    padding: 10px;
+    width: 38px;
+    height: 37px;
+    
+
+}
+.host h1{
+     color: white;
+    margin-bottom: 30px;
+    font-size: 3rem;
+    font-weight: 700;
+}
+.host-text h2{
+    font-weight: 700;
+    font-size: 2rem;
+    color: white;
+    margin-bottom: 20px;
+}
+.host-text p{
+    line-height: 24px;
+    font-size: 1rem;
+    opacity: 60%;
+    color: #ffffff;
+    margin-bottom: 20px;
+}
+
+
 
 /* small device */
 @media screen and (max-width:576px){
@@ -240,7 +317,24 @@ font-weight: 550;
     font-size: 2rem;
     padding-top: 20px;
   }
-   
+  .host{
+    padding: 20px;
+  }
+   .host-content{
+    flex-direction: column;
+    
+    
+   }
+   .host-text{
+    text-align: center;
+    padding-left: 0px;
+   }
+   .icons{
+    
+    max-width: max-content;
+    margin: 0 auto;
+   }
+  
     
 
 }
