--- a/styles/style.css
+++ b/styles/style.css
@@ -21,7 +21,7 @@
    
     
 }
-header,.grid-card,.episode-container,.host,.about,.star-section{               /*display none*/
+header,.grid-card,.episode-container,.host,.about,.star-section,footer{               /*display none*/
     /* display: none;                           */
 }
 
@@ -87,7 +87,8 @@ padding: 12px 16px;
 border-radius: 20px;
 color: white;
 border: none;
-font-weight: 550;
+font-weight:600;
+cursor: pointer;
 }.hidden{
     display: none;
 }
@@ -120,13 +121,14 @@ font-weight: 550;
    
 }
 .grid-container > *{
-    box-shadow: 0px 4px 4px 0 rgba(0, 0, 0, 0.25);
+    box-shadow: 0px 4px 4px 0 rgba(32, 21, 21, 0.25);
     text-align: left;
     background-color: rgba(53, 17, 101, 0.4);
     padding: 30px;
     color: white;
     align-content: center;
     border-radius: 40px;
+
     
     
 }
@@ -294,7 +296,7 @@ font-weight: 550;
 .star-section{
     background-color: rgba(26, 11, 46, 1);
     padding-bottom: 100px;
-    padding-top: 100px;
+    padding-top: 50px;
 }
 .star-grid{
     display: grid;
@@ -321,6 +323,7 @@ font-weight: 550;
 
 .about-content{
     text-align: center;
+    padding-top: 60px;
 }
 .about-content h1{
     font-size: 3rem;
@@ -395,6 +398,93 @@ footer{
     margin-left: 15px;
 }
 
+/* Hero section design */
+
+.hero{
+    background-image: url(../images/hero-bg.png);
+    min-height: 600px;
+    
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+   
+}
+.banner-parent{
+    width: 400px;
+    height: 400px;
+    
+    margin: 0 auto;
+    position: relative;
+    overflow: hidden;
+}
+.banner-image{
+    
+    max-width: max-content;
+    position: absolute;
+    left: 50%;
+    top: 10%;
+    transform: translate(-50%);
+}
+.banner-mic{
+    position: absolute;
+    top: 23%;
+    left: 32%;
+    width: 130px;
+}
+.banner-mic img{
+    width: 100%;
+}
+#badge{
+    color: #1A0B2E;
+    position: absolute;
+    top: 10%;
+    left: 65%;
+    z-index: 1;
+    background-color: #00FF88;
+    padding: 10px 30px;
+    border-radius: 45px;
+     animation: bounce 1.5s ease-in-out infinite alternate;
+     font-size: 1.2rem;
+     font-weight: 600;
+     box-shadow: 0 3px 27px 0 rgba(0, 255, 136, 0.5);
+    
+}
+.banner-content{
+    margin-top: 20px;
+    text-align: center;
+}
+.banner-content h1{
+    color: white;
+    font-size: 3rem;
+   
+}
+.banner-content p{
+color: white;
+    font-size: 1rem;
+    opacity: 60%;
+}
+#btn-1{
+   padding: 10px 16px;
+border-radius: 20px;
+color: rgb(255, 255, 255);
+border: none;
+font-weight: 600;
+background: transparent;
+border: 2px solid #00FF88;
+margin-top: 10px;
+margin-bottom: 10px;
+box-shadow: 0 4px 4px 0 rgba(141, 209, 129, 0.5);
+color: #00FF88;
+
+}
+@keyframes bounce {
+    from {
+        transform: translateY(0);
+    }
+    to {
+        transform: translateY(20px);
+    }
+}
 
     
 
@@ -461,6 +551,12 @@ footer{
   .about{
     padding-top: 50px;
   }
+  .about-content h1 {
+    font-size: 2.25rem;
+  }
+  .host-text h2 {
+    padding-top: 20px;
+  }
   .star-section{
     padding-top: 50px;
   }
@@ -472,14 +568,35 @@ footer{
     
     
  }
-.icons{
+ .banner-image{
+  
+    width:290px;
+    height: 300px;
+    top: 18%;
+
+ }
+.banner-image img{
+    width: 100%;
+}
+  .banner-mic{
+    top: 22%;
+    left: 34%;
+    width: 100px;
     
    
-   
+  }
+  .banner-mic img{
+    width: 100%;
+  }
+  #badge{
+        top: 20%;
+        padding: 10px 20px;
+        font-size: 1.25rem;
+  }
+  .banner-parent{
+    width: 300px;
+  }
 
-}
-
-  
     
 
 }
